02-loadgen.yaml
apiVersion: v1
kind: Pod
metadata:
  name: loadgen
  namespace: kubernet-lab
spec:
  containers:
    - name: loadgen
      image: alpine:3.20
      command: ["sh", "-c", "apk add --no-cache curl; sleep 36000"]
