service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: kubernet-lab
spec:
  selector:
    app: web
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
